# hermes-decomp

./: .gitignore  Cargo.toml  LICENSE  README.md  test.py
crates/hbc-decomp/: Cargo.toml  build.rs
crates/hbc-decomp-cli/: Cargo.toml
crates/hbc-decomp-cli/src/: cli_args.rs  helpers.rs  main.rs
crates/hbc-decomp-cli/src/commands/: bindiff_cmd.rs  debug_cmd.rs  decompile_cmd.rs  dump_cmd.rs  extract_cmd.rs  mod.rs
crates/hbc-decomp-cli/src/tui/: app.rs  events.rs  formatting.rs  mod.rs  ui.rs
crates/hbc-decomp-mcp/: Cargo.toml
crates/hbc-decomp-mcp/src/: main.rs  server.rs
crates/hbc-decomp/resources/bytecode/: Bytecode97.json  Bytecode98.json
crates/hbc-decomp/src/: debug.rs  disasm.rs  error.rs  format.rs  io.rs  lib.rs  opcode.rs  pipeline.rs  util.rs
crates/hbc-decomp/src/analysis/: liveness.rs  loops.rs  mod.rs  reaching.rs  xref.rs
crates/hbc-decomp/src/analysis/closure/: context.rs  info.rs  mod.rs
crates/hbc-decomp/src/analysis/ipa/: graph.rs  inference.rs  mod.rs  structs.rs  traversal.rs
crates/hbc-decomp/src/analysis/metro/: detection.rs  exports.rs  graph.rs  mod.rs  propagation.rs  registry.rs
crates/hbc-decomp/src/analysis/naming/: generation.rs  mod.rs  registers.rs  renaming.rs
crates/hbc-decomp/src/decompile/: instructions.rs  mod.rs
crates/hbc-decomp/src/file/: mod.rs  structure.rs
crates/hbc-decomp/src/ir/: mod.rs  types.rs
crates/hbc-decomp/src/ir/cfg/: dot.rs  (+1 more)
crates/hbc-decomp/src/transforms/: arrays.rs  cleanup.rs  cleanup_advanced.rs  codegen.rs  default_params.rs  exports.rs  inline.rs  metro_transform.rs  mod.rs  name_inference.rs  objects.rs  optimize.rs  propagate.rs  simplify.rs  simplify_logic.rs  spread_rest.rs  ssa.rs  ternary_returns.rs
(+60 files in other folders)
