[package]
name = "hbc-decomp-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI tool to decompile Hermes bytecode (.hbc) from React Native apps"
repository = "https://github.com/SymbioticSec/hermes-decomp"

[[bin]]
name = "hermes-decomp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
hbc-decomp = { path = "../hbc-decomp" }
ratatui = "0.26.3"
crossterm = "0.27.0"
regex = "1.10"
serde_json = "1.0"
