[package]
name = "hbc-decomp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Hermes bytecode (.hbc) decompiler library for React Native apps"
repository = "https://github.com/SymbioticSec/hermes-decomp"
keywords = ["hermes", "bytecode", "decompiler", "react-native", "reverse-engineering"]
categories = ["development-tools", "parser-implementations"]
build = "build.rs"

[dependencies]
colored = "3.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
